# citybikes-de

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  run-local.sh
.github/workflows/: ci.yml  terraform.yml
airflow/: requirements.txt
airflow/dags/: citybikes_monthly_snapshot.py  citybikes_pipeline.py
airflow/tests/dags/: test_dag_example.py
docker/: docker-compose.yml
docker/ingestion/: Dockerfile  requirements.txt
ingestion/: main.py  pyproject.toml
ingestion/config/: cities.yml
ingestion/src/: citybikes_client.py  models.py  storage.py
ingestion/tests/: test_client.py  test_models.py  test_storage.py
kestra/config/: application.yml
kestra/flows/: citybikes_incremental.yml  citybikes_test.yml
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
