[project]
name = "citybikes-ingestion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=3.9.0",
    "httpx>=0.28.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.6",
]
